Remove duplicate font and fix overflow

--- a/static/landing_style.css
+++ b/static/landing_style.css
@@ -1,6 +1,5 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 body {
@@ -10,6 +9,7 @@ body {
     padding: 0;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 .container {
@@ -30,7 +30,6 @@ body {
     text-transform: lowercase;
     text-align: center;
     letter-spacing: 2px;
-
 }
 
 .title-sm {
@@ -39,6 +38,7 @@ body {
 
 .title-lg {
     font-size: 6.5rem;
+    font-style: italic;
 }
 
 .button-container {
